Move everything to Java SE 8